Fix gwtc